add Pydantic input classes Context and GuidedPrompt and make few-shot default for all flows

--- a/example/model/model.ipynb
+++ b/example/model/model.ipynb
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -64,6 +64,7 @@
     "from uniflow.config import Config\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
+    "from uniflow.schema import Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -77,9 +78,8 @@
      "data": {
       "text/plain": [
        "['LinearFlow',\n",
-       " 'FewShotModelFlow',\n",
        " 'ModelFlow',\n",
-       " 'OpenAIJsonModelFlow',\n",
+       " 'JsonModelFlow',\n",
        " 'HuggingFaceModelFlow',\n",
        " 'LMQGModelFlow']"
       ]
@@ -106,46 +106,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{\n",
-    "    \"instruction\": \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\"\"\",\n",
-    "    \"examples\": [\n",
-    "        {\n",
-    "            \"context\": \"\"\"The quick brown fox jumps over the lazy dog.\"\"\",\n",
-    "            \"question\": \"\"\"What is the color of the fox?\"\"\",\n",
-    "            \"answer\": \"\"\"brown.\"\"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"context\": \"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
-    "            \"question\": \"\"\"What is the color of the dog?\"\"\",\n",
-    "            \"answer\": \"\"\"black.\"\"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"context\": \"\"\"It was a sunny day and the sky color is blue.\"\"\",\n",
-    "            \"question\": \"\"\"\"\"\",\n",
-    "            \"answer\": \"\"\"\"\"\",\n",
-    "        }\n",
-    "    ],\n",
-    "},\n",
-    "        {\n",
-    "    \"instruction\": \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include context, question, and answer in the response.\"\"\",\n",
-    "    \"examples\": [\n",
-    "        {\n",
-    "            \"context\": \"\"\"The quick brown fox jumps over the lazy dog.\"\"\",\n",
-    "            \"question\": \"\"\"What is the color of the fox?\"\"\",\n",
-    "            \"answer\": \"\"\"brown.\"\"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"context\": \"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
-    "            \"question\": \"\"\"What is the color of the dog?\"\"\",\n",
-    "            \"answer\": \"\"\"black.\"\"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"context\": \"\"\"My name is bobby and I am a talent software engineer working on AI/ML.\"\"\",\n",
-    "            \"question\": \"\"\"\"\"\",\n",
-    "            \"answer\": \"\"\"\"\"\",\n",
-    "        }\n",
-    "    ],\n",
-    "}]\n"
+    "contexts = [\n",
+    "    \"It was a sunny day and the sky color is blue.\",\n",
+    "    \"My name is Bobby and I am a talent software engineer working on AI/ML\",\n",
+    "]\n",
+    "data = [\n",
+    "    Context(context=c)\n",
+    "    for c in contexts\n",
+    "]"
    ]
   },
   {
@@ -160,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:02<00:00,  1.46s/it]\n"
+      "100%|██████████| 2/2 [00:02<00:00,  1.04s/it]\n"
      ]
     }
    ],
@@ -177,19 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What is the color of the sky?',\n",
-       "   'answer': 'blue.'}],\n",
-       " 'error': 'Failed to deserialize 0 examples'}"
+       "{'response': ['question: What was the weather like?\\nanswer: sunny.'],\n",
+       " 'error': 'No errors.'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +220,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x105804d30>"
+       "<graphviz.graphs.Digraph at 0x1061e8970>"
       ]
      },
      "metadata": {},
@@ -267,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +280,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1069089a0>"
+       "<graphviz.graphs.Digraph at 0x1061e9210>"
       ]
      },
      "metadata": {},
