--- a/example/model/openai_model.ipynb
+++ b/example/model/openai_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for OpenAIJsonConfig\n",
+    "# Notebook for FewShotModelFlow \n",
     "## Update system path"
    ]
   },
@@ -61,10 +61,9 @@
     "\n",
     "from uniflow.client import Client\n",
     "from uniflow.flow.flow_factory import FlowFactory\n",
-    "from uniflow.model.model import ModelServerFactory\n",
-    "from uniflow.config import OpenAIJsonConfig\n",
+    "from uniflow.config import OpenAIConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.schema import GuidedPrompt, Context\n",
+    "from uniflow.schema import Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -94,26 +93,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['OpenAIModelServer', 'HuggingfaceModelServer', 'LMQGModelServer']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ModelServerFactory.list()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,30 +101,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contents = [\"It was a sunny day and the sky color is blue.\", \"My name is bobby and I am a talent software engineer working on AI/ML.\"]\n",
+    "data = [\n",
+    "    Context(context=c)\n",
+    "    for c in contents\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "contexts = [\n",
-    "    \"It was a sunny day and the sky color is blue.\",\n",
-    "    \"My name is bobby and I am a talent software engineer working on AI/ML.\",\n",
-    "]\n",
-    "\n",
-    "guided_prompt = GuidedPrompt(\n",
-    "    instruction=\"Generate one question and its corresponding answer based on the context. Follow the format of the examples below to include context, question, and answer in the response in json\"\n",
-    ")\n",
-    "\n",
-    "data = [Context(context=c) for c in contexts]"
+    "config = OpenAIConfig()\n",
+    "client = Client(config)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:01<00:00,  1.24it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "config = OpenAIJsonConfig(guided_prompt_template=guided_prompt)\n",
-    "client = Client(config)"
+    "output = client.run(data)"
    ]
   },
   {
@@ -154,25 +145,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.01it/s]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "      'question': 'What is the color of the sky?',\n",
-       "      'answer': 'blue.'}],\n",
-       "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x10aa51ba0>},\n",
-       " {'output': [{'response': [{'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
-       "      'question': \"What is Bobby's occupation?\",\n",
-       "      'answer': 'a talented software engineer working on AI/ML.'}],\n",
-       "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x10aa51600>}]"
+       "{'response': ['question: What is the color of the sky?\\nanswer: blue.'],\n",
+       " 'error': 'No errors.'}"
       ]
      },
      "execution_count": 7,
@@ -181,8 +157,7 @@
     }
    ],
    "source": [
-    "output = client.run(data)\n",
-    "output"
+    "output[0]['output'][0]"
    ]
   },
   {
@@ -193,9 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What is the color of the sky?',\n",
-       "   'answer': 'blue.'}],\n",
+       "{'response': ['question: What type of technologies do you work on?\\nanswer: AI/ML.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
@@ -205,7 +178,7 @@
     }
    ],
    "source": [
-    "output[0]['output'][0]"
+    "output[1]['output'][0]"
    ]
   },
   {
@@ -264,7 +237,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1058e7010>"
+       "<graphviz.graphs.Digraph at 0x1059e2140>"
       ]
      },
      "metadata": {},
@@ -324,7 +297,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1059b1d20>"
+       "<graphviz.graphs.Digraph at 0x10ac7fe80>"
       ]
      },
      "metadata": {},
