--- a/example/model/self_instruct_pdf_source.ipynb
+++ b/example/model/self_instruct_pdf_source.ipynb
@@ -76,9 +76,10 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from uniflow.client import Client\n",
-    "from uniflow.config import Config\n",
+    "from uniflow.config import OpenAIJsonConfig\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from langchain.document_loaders import PyPDFLoader\n",
+    "from uniflow.schema import Context, GuidedPrompt\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()"
@@ -137,21 +138,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{\n",
-    "    \"instruction\": \"\"\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.\"\"\",\n",
-    "    \"examples\": [\n",
-    "        {\n",
-    "            \"context\": \"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\"\"\",\n",
-    "            \"question\": \"\"\"Who published A Mathematical Theory of Communication in 1948?\"\"\",\n",
-    "            \"answer\": \"\"\"Claude E. Shannon.\"\"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"context\": p,\n",
-    "            \"question\": \"\"\"\"\"\",\n",
-    "            \"answer\": \"\"\"\"\"\",\n",
-    "        }\n",
-    "    ],\n",
-    "} for p in pages[0].page_content.split(\"\\n\\n\") if len(p) > 200]\n"
+    "guided_prompt = GuidedPrompt(\n",
+    "    instruction=\"Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.\",\n",
+    "    examples=[\n",
+    "        Context(\n",
+    "            context=\"In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.\",\n",
+    "            question=\"Who published A Mathematical Theory of Communication in 1948?\",\n",
+    "            answer=\"Claude E. Shannon.\"\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "data = [ Context(context=p) for p in pages[0].page_content.split(\"\\n\\n\") if len(p) > 200]\n"
    ]
   },
   {
@@ -162,13 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'instruction': 'Generate one question and its corresponding answer based on the context. Following the format of the examples below to include the same context, question, and answer in the response.',\n",
-       "  'examples': [{'context': 'In 1948, Claude E. Shannon published A Mathematical Theory of\\nCommunication (Shannon, 1948) establishing the theory of\\ninformation. In his article, Shannon introduced the concept of\\ninformation entropy for the first time. We will begin our journey here.',\n",
-       "    'question': 'Who published A Mathematical Theory of Communication in 1948?',\n",
-       "    'answer': 'Claude E. Shannon.'},\n",
-       "   {'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\n– Charles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they\\'re\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I\\'ll call the manager\\'s\\nschedule and the mak er\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou\\'re doing ev ery hour .\\nWhen y ou use time that w ay, it\\'s merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another w ay of using time\\nthat\\'s common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can\\'t write or progr am well in units of an hour .\\nThat\\'s barely enough time to get started.\\nWhen y ou\\'re oper ating on the mak er\\'s schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do an ything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er\\'s schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn\\'t merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou\\'re a mak er, think of y our own\\ncase. Don\\'t y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don\\'t. And\\nambitious projects are b y definition close to the limits of y our',\n",
-       "    'question': '',\n",
-       "    'answer': ''}]}]"
+       "[Context(context='11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\n– Charles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they\\'re\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I\\'ll call the manager\\'s\\nschedule and the mak er\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou\\'re doing ev ery hour .\\nWhen y ou use time that w ay, it\\'s merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another w ay of using time\\nthat\\'s common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can\\'t write or progr am well in units of an hour .\\nThat\\'s barely enough time to get started.\\nWhen y ou\\'re oper ating on the mak er\\'s schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do an ything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er\\'s schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn\\'t merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou\\'re a mak er, think of y our own\\ncase. Don\\'t y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don\\'t. And\\nambitious projects are b y definition close to the limits of y our')]"
       ]
      },
      "execution_count": 7,
@@ -186,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = Config(model_config=OpenAIModelConfig())\n",
+    "config = OpenAIJsonConfig()\n",
     "client = Client(config)"
    ]
   },
@@ -199,7 +191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:07<00:00,  7.31s/it]\n"
+      "100%|██████████| 1/1 [00:02<00:00,  2.01s/it]\n"
      ]
     }
    ],
@@ -215,11 +207,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': [{'context': '11/6/23, 11:40 AM Maker\\'s Schedule, Manager\\'s Schedule\\nhttps://www.paulgraham.com/makersschedule.html 1/3\\n\"...the mere consciousness of an engagement will sometimes\\nworry a whole da y.\"\\n– Charles Dick ens\\nJuly 2009\\nOne reason progr ammers dislik e meetings so much is that they\\'re\\non a different t ype of schedule from other people. Meetings cost\\nthem more.\\nThere are two t ypes of schedule, which I\\'ll call the manager\\'s\\nschedule and the mak er\\'s schedule. The manager\\'s schedule is for\\nbosses. It\\'s embodied in the tr aditional appointment book, with\\neach da y cut into one hour interv als. Y ou can block off sev eral\\nhours for a single task if y ou need to , but b y default y ou change\\nwhat y ou\\'re doing ev ery hour .\\nWhen y ou use time that w ay, it\\'s merely a pr actical problem to\\nmeet with someone. Find an open slot in y our schedule, book\\nthem, and y ou\\'re done.\\nMost powerful people are on the manager\\'s schedule. It\\'s the\\nschedule of command. But there\\'s another w ay of using time\\nthat\\'s common among people who mak e things, lik e progr ammers\\nand writers. They gener ally prefer to use time in units of half a\\nday at least. Y ou can\\'t write or progr am well in units of an hour .\\nThat\\'s barely enough time to get started.\\nWhen y ou\\'re oper ating on the mak er\\'s schedule, meetings are a\\ndisaster . A single meeting can blow a whole afternoon, b y\\nbreaking it into two pieces each too small to do anything hard in.\\nPlus y ou ha ve to remember to go to the meeting. That\\'s no\\nproblem for someone on the manager\\'s schedule. There\\'s alw ays\\nsomething coming on the next hour; the only question is what.\\nBut when someone on the mak er\\'s schedule has a meeting, they\\nhave to think about it.\\nFor someone on the mak er\\'s schedule, ha ving a meeting is lik e\\nthrowing an ex ception. It doesn\\'t merely cause y ou to switch\\nfrom one task to another; it changes the mode in which y ou\\nwork.\\nI find one meeting can sometimes affect a whole da y. A meeting\\ncommonly blows at least half a da y, by breaking up a morning or\\nafternoon. But in addition there\\'s sometimes a cascading effect. If\\nI know the afternoon is going to be brok en up , I\\'m slightly less\\nlikely to start something ambitious in the morning. I know this\\nmay sound o versensitiv e, but if y ou\\'re a mak er, think of y our own\\ncase. Don\\'t y our spirits rise at the thought of ha ving an entire da y\\nfree to work, with no appointments at all? W ell, that means y our\\nspirits are correspondingly depressed when y ou don\\'t. And\\nambitious projects are b y definition close to the limits of y our',\n",
-       "      'question': 'What type of schedule is preferred by programmers and writers according to the context?',\n",
-       "      'answer': 'They generally prefer to use time in units of half a day at least.'}],\n",
-       "    'error': 'Failed to deserialize 0 examples'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x1405e7460>}]"
+       "[{'output': [{'response': [{'context': \"11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule...\",\n",
+       "      'question': \"What is the difference between the manager's schedule and the maker's schedule?\",\n",
+       "      'answer': \"The manager's schedule is divided into one-hour intervals for appointments, while the maker's schedule consists of units of at least half a day for tasks like writing or programming.\"}],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x154ca2710>}]"
       ]
      },
      "execution_count": 10,
@@ -233,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -265,26 +257,20 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's ...</td>\n",
-       "      <td>What type of schedule is preferred by programm...</td>\n",
-       "      <td>They generally prefer to use time in units of ...</td>\n",
+       "      <td>11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule...</td>\n",
+       "      <td>What is the difference between the manager's schedule and the maker's schedule?</td>\n",
+       "      <td>The manager's schedule is divided into one-hour intervals for appointments, while the maker's schedule consists of units of at least half a day for tasks like writing or programming.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             context  \\\n",
-       "0  11/6/23, 11:40 AM Maker's Schedule, Manager's ...   \n",
-       "\n",
-       "                                            question  \\\n",
-       "0  What type of schedule is preferred by programm...   \n",
-       "\n",
-       "                                              answer  \n",
-       "0  They generally prefer to use time in units of ...  "
+       "                                                     context                                                                         question                                                                                                                                                                                  answer\n",
+       "0  11/6/23, 11:40 AM Maker's Schedule, Manager's Schedule...  What is the difference between the manager's schedule and the maker's schedule?  The manager's schedule is divided into one-hour intervals for appointments, while the maker's schedule consists of units of at least half a day for tasks like writing or programming."
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,8 +294,19 @@
     "    'answer': answers\n",
     "})\n",
     "\n",
+    "# Set display options\n",
+    "pd.set_option('display.max_colwidth', None)  # or use a specific width like 50\n",
+    "pd.set_option('display.width', 1000)\n",
+    "\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
