--- a/example/model/huggingface_model.ipynb
+++ b/example/model/huggingface_model.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +72,7 @@
     "from uniflow.config import HuggingfaceConfig\n",
     "from uniflow.model.config import HuggingfaceModelConfig\n",
     "from uniflow.viz import Viz\n",
+    "from uniflow.schema import GuidedPrompt, Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -82,29 +83,34 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "First, we need to demostrate sample prompts for LLM, those include instruction and sample json format. "
+    "First, we need to demonstrate sample prompts for LLM, those include instruction and sample json format. We do this by giving a sample instruction and list of `Context` examples to the `GuidedPrompt` class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_instruction = \"\"\"Generate one question and its corresponding answer based on the context. Following \\\n",
     "the format of the examples below to include context, question, and answer in the response.\"\"\"\n",
     "\n",
-    "sample_json_format = [        \n",
-    "        {\n",
-    "            \"context\": \"\"\"The quick brown fox jumps over the lazy dog.\"\"\",\n",
-    "            \"question\": \"\"\"What is the color of the fox?\"\"\",\n",
-    "            \"answer\": \"\"\"brown.\"\"\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"context\": \"\"\"The quick brown fox jumps over the lazy black dog.\"\"\",\n",
-    "            \"question\": \"\"\"What is the color of the dog?\"\"\",\n",
-    "            \"answer\": \"\"\"black.\"\"\"\n",
-    "        }]"
+    "sample_examples = [\n",
+    "        Context(\n",
+    "            context=\"The quick brown fox jumps over the lazy dog.\",\n",
+    "            question=\"What is the color of the fox?\",\n",
+    "            answer=\"brown.\"\n",
+    "        ),\n",
+    "        Context(\n",
+    "            context=\"The quick brown fox jumps over the lazy black dog.\",\n",
+    "            question=\"What is the color of the dog?\",\n",
+    "            answer=\"black.\"\n",
+    "        )]\n",
+    "\n",
+    "guided_prompt = GuidedPrompt(\n",
+    "    instruction=sample_instruction,\n",
+    "    examples=sample_examples\n",
+    ")"
    ]
   },
   {
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +140,7 @@
     "trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy \\\n",
     "of applying for and registering intellectual property rights in the United States and select foreign countries \\\n",
     "on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously \\\n",
-    "protect our intellectual property, including trademarks, patents and trade secrets against third-party \\ \n",
+    "protect our intellectual property, including trademarks, patents and trade secrets against third-party \\\n",
     "infringement and misappropriation.\"\"\",\n",
     "    \"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) \\\n",
     "establishing the theory of information. In his article, Shannon introduced the concept of information entropy \\\n",
@@ -144,7 +150,7 @@
     "Mathematically, it can be written as: \\(\\frac{d}{dx}g(h(x)) = \\frac{dg}{dh}(h(x))\\cdot \\frac{dh}{dx}(x)\\).\"\"\",\n",
     "    \"\"\"Hypothesis testing involves making a claim about a population parameter based on sample data, and then \\\n",
     "conducting a test to determine whether this claim is supported or rejected. This typically involves \\\n",
-    "calculating a test statistic, determining a significance level, and comparing the calculated value to a \\ \n",
+    "calculating a test statistic, determining a significance level, and comparing the calculated value to a \\\n",
     "critical value to obtain a p-value. \"\"\"\n",
     "]\n",
     "\n",
@@ -157,12 +163,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, for the given raw text strings `raw_context_input` above, we can decorate them with our sample prompts. "
+    "Next, for the given raw text strings `raw_context_input` above, we convert them to the `Context` class to be processed by `uniflow`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,14 +206,14 @@
    ],
    "source": [
     "\n",
-    "raw_context_input_with_prompt = [\n",
-    "    {\"instruction\": sample_instruction, \"examples\": sample_json_format + [{\"context\": data}]}\n",
+    "input_data = [\n",
+    "    Context(context=data)\n",
     "    for data in raw_context_input_400\n",
     "]\n",
     "\n",
-    "print(\"sample size of processed raw context with prompts: \", len(raw_context_input_with_prompt))\n",
+    "print(\"sample size of processed input data: \", len(input_data))\n",
     "\n",
-    "raw_context_input_with_prompt[:2]\n"
+    "input_data[:2]\n"
    ]
   },
   {
@@ -218,12 +224,14 @@
     "\n",
     "In this example, we will use the [HuggingfaceModelServer](https://github.com/CambioML/uniflow/blob/main/uniflow/model/server.py#L170)'s default LLM to generate questions and answers. Let's import the config and client of this model.\n",
     "\n",
+    "Here, we pass in our `guided_prompt` to the HuggingfaceConfig to use our customized instructions and examples, instead of the `uniflow` default ones.\n",
+    "\n",
     "Note, base on your GPU memory, you can set your optimal `batch_size` below. (We attached our `batch_size` benchmarking results in the appendix of this notebook.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +247,9 @@
     }
    ],
    "source": [
-    "config = HuggingfaceConfig(model_config=HuggingfaceModelConfig(batch_size=128))\n",
+    "config = HuggingfaceConfig(\n",
+    "    guided_prompt_template=guided_prompt,\n",
+    "    model_config=HuggingfaceModelConfig(batch_size=128))\n",
     "client = Client(config)"
    ]
   },
@@ -252,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +283,7 @@
     }
    ],
    "source": [
-    "output = client.run(raw_context_input_with_prompt)"
+    "output = client.run(input_data)"
    ]
   },
   {
@@ -287,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
