--- a/example/model/lmqg_model.ipynb
+++ b/example/model/lmqg_model.ipynb
@@ -4,16 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for LMQAModelFlow \n",
-    "## Update system path\n",
+    "# Notebook for LMQAModelFlow "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Before running the code\n",
     "\n",
-    "Note: https://github.com/explosion/spaCy/issues/4577 for en_core_web_sm issue\n",
-    "https://github.com/explosion/spaCy/discussions/7764 for ValueError: [E967] No factory meta information found for 'tagger'. This is likely a bug in spaCy."
+    "You will need to have the following packages installed:\n",
+    "```\n",
+    "pip3 install lmqg\n",
+    "```\n",
+    "\n",
+    "Also, you will need to run the following command:\n",
+    "```\n",
+    "python -m spacy download en_core_web_sm\n",
+    "```\n",
+    "\n",
+    "See below for more details:\n",
+    "\n",
+    "- *https://github.com/explosion/spaCy/issues/4577 for en_core_web_sm issue*\n",
+    "- *https://github.com/explosion/spaCy/discussions/7764 for ValueError: [E967] No factory meta information found for 'tagger'. This is likely a bug in spaCy.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update the system path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
@@ -57,6 +73,7 @@
     "from uniflow.config import LMQGConfig\n",
     "from uniflow.model.config import LMQGModelConfig\n",
     "from uniflow.viz import Viz\n",
+    "from uniflow.schema import Context\n",
     "\n",
     "import en_core_web_sm\n",
     "nlp = en_core_web_sm.load()\n"
@@ -64,25 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LinearFlow',\n",
-       " 'FewShotModelFlow',\n",
-       " 'ModelFlow',\n",
-       " 'OpenAIJsonModelFlow',\n",
-       " 'HuggingFaceModelFlow',\n",
-       " 'LMQGModelFlow']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "FlowFactory.list()"
    ]
@@ -96,37 +97,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{\"context\": \"\"\"William Turner was an English painter who specialised in watercolour landscapes. He is often known\n",
+    "data = [\n",
+    "  Context(context=\"\"\"William Turner was an English painter who specialised in watercolour landscapes. He is often known\n",
     "          \"as William Turner of Oxford or just Turner of Oxford to distinguish him from his contemporary,\n",
     "          \"J. M. W. Turner. Many of Turner's paintings depicted the countryside around Oxford. One of his\n",
-    "          \"best known pictures is a view of the city of Oxford from Hinksey Hill.\"\"\"},\n",
-    "        {\"context\": \"\"\"My name is bobby and I am a talent software engineer working on AI/ML.\"\"\"}]"
+    "          \"best known pictures is a view of the city of Oxford from Hinksey Hill.\"\"\"),\n",
+    "        Context(context=\"\"\"My name is bobby and I am a talent software engineer working on AI/ML.\"\"\")\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/models/auto/tokenization_auto.py:671: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/models/auto/configuration_auto.py:1033: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/modeling_utils.py:2570: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/utils/hub.py:374: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config = LMQGConfig(model_config=LMQGModelConfig(batch_size=1))\n",
     "client = Client(config)"
@@ -134,52 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 1223.10it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "100%|██████████| 4/4 [00:00<00:00, 1838.60it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 2089.84it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 2918.79it/s]\n",
-      "100%|██████████| 2/2 [00:02<00:00,  1.04s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output = client.run(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[('Who was an English painter who specialised in watercolour landscapes?',\n",
-       "   'William Turner'),\n",
-       "  ('What is William Turner often known as?', 'William Turner of Oxford'),\n",
-       "  (\"What did many of William Turner's paintings depict?\", 'countryside'),\n",
-       "  ('From where did William Turner view the city of Oxford?', 'Hinksey Hill.')]]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output[0]['output'][0]['response']"
    ]
@@ -193,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,59 +156,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
-       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
-       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
-       "<!-- Generated by graphviz version 2.43.0 (0)\n",
-       " -->\n",
-       "<!-- Title: %3 Pages: 1 -->\n",
-       "<svg width=\"281pt\" height=\"116pt\"\n",
-       " viewBox=\"0.00 0.00 280.98 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 112)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-112 276.98,-112 276.98,4 -4,4\"/>\n",
-       "<!-- root -->\n",
-       "<g id=\"node1\" class=\"node\">\n",
-       "<title>root</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"136.49\" cy=\"-90\" rx=\"29.8\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"136.49\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
-       "</g>\n",
-       "<!-- thread_0/lmqg_model_op_1 -->\n",
-       "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_0/lmqg_model_op_1</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"136.49\" cy=\"-18\" rx=\"136.48\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"136.49\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/lmqg_model_op_1</text>\n",
-       "</g>\n",
-       "<!-- root&#45;&gt;thread_0/lmqg_model_op_1 -->\n",
-       "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_0/lmqg_model_op_1</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M136.49,-71.7C136.49,-63.98 136.49,-54.71 136.49,-46.11\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"139.99,-46.1 136.49,-36.1 132.99,-46.1 139.99,-46.1\"/>\n",
-       "</g>\n",
-       "</g>\n",
-       "</svg>\n"
-      ],
-      "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f51f08d4820>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(graph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,52 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
-       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
-       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
-       "<!-- Generated by graphviz version 2.43.0 (0)\n",
-       " -->\n",
-       "<!-- Title: %3 Pages: 1 -->\n",
-       "<svg width=\"281pt\" height=\"116pt\"\n",
-       " viewBox=\"0.00 0.00 280.98 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
-       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 112)\">\n",
-       "<title>%3</title>\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-112 276.98,-112 276.98,4 -4,4\"/>\n",
-       "<!-- root -->\n",
-       "<g id=\"node1\" class=\"node\">\n",
-       "<title>root</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"136.49\" cy=\"-90\" rx=\"29.8\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"136.49\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">root</text>\n",
-       "</g>\n",
-       "<!-- thread_0/lmqg_model_op_2 -->\n",
-       "<g id=\"node2\" class=\"node\">\n",
-       "<title>thread_0/lmqg_model_op_2</title>\n",
-       "<ellipse fill=\"none\" stroke=\"black\" cx=\"136.49\" cy=\"-18\" rx=\"136.48\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"136.49\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">thread_0/lmqg_model_op_2</text>\n",
-       "</g>\n",
-       "<!-- root&#45;&gt;thread_0/lmqg_model_op_2 -->\n",
-       "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>root&#45;&gt;thread_0/lmqg_model_op_2</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M136.49,-71.7C136.49,-63.98 136.49,-54.71 136.49,-46.11\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"139.99,-46.1 136.49,-36.1 132.99,-46.1 139.99,-46.1\"/>\n",
-       "</g>\n",
-       "</g>\n",
-       "</svg>\n"
-      ],
-      "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f52ce001b10>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(graph)"
    ]
